--- a/views/popup.html
+++ b/views/popup.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="content"></div>
-    <script src="resources/bundle.js"></script>
+    <script src="../resources/bundle.js"></script>
 </body>
 </html>
